[package]
name = "cloudflared-init"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"

openssl-probe = "0.1"

paw = "1.0"
structopt = { version = "0.3", features = ["paw"] }
regex = "1.5"
anyhow = "1.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

signal-hook = "0.3"
nix = "0.23"